@@ -13,6 +13,7 @@ breezy-debian (2.8.27) UNRELEASED; urgency=medium
     formed XML.
   * Support tildes being escaped to underscores when finding the tag for
     upstream versions in Git repositories.
+  * Check gbp.conf for tag format.
 
  -- Jelmer Vernooĳ <jelmer@debian.org>  Wed, 06 Mar 2019 21:35:13 +0000
 
